--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
                     <ul class="nav">
                         <li><a href="https://kdongnote.tistory.com/">Tistory</a></li>
                         <li><a href="https://codepen.io/kdong1224">Codepen</a></li>
+                        <li><a href="https://kdongsreact.web.app/">React</a></li>
+                        <li><a href="https://kdongsvue.web.app/">Vue</a></li>
                     </ul>
                 </div>
             </div>
@@ -598,6 +600,27 @@
                                     <h5>메가박스</h5>
                                     <p>MEGABOX</p>
                                     <span>메가박스</span>
+                                </div>
+                            </div>
+                        </a> 
+                    </section>
+                    <!-- //box -->
+
+                    <!-- box -->
+                    <section class="color-shape reference">
+                        <a href="http://vefy21.dothome.co.kr/" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">팀 프로젝트</span>
+                                    <span class="overlay-text-thumb-donut">V.E.F.Y</span>
+                                    <span class="overlay-text-thumb1-donut">V.E.F.Y</span>
+                                    <span class="overlay-text-thumb2-donut">팀 프로젝트</span>
+                                </div>
+                                <img src="assets/img/Landscape-circle/sky.png" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>팀 프로젝트</h5>
+                                    <p>V.E.F.Y</p>
+                                    <span>팀 프로젝트</span>
                                 </div>
                             </div>
                         </a> 
