--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="https://kdong1224.github.io/dothome21/"
+          <a class="brand" href="https://rice-price-kdong.web.app/"
             >밥값하는 개발자 : KDONG</a
           >
           <div class="nav-collapse collapse pull-right">
