React Portfolio Link Add

--- a/index.html
+++ b/index.html
@@ -151,16 +151,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="https://rice-price-kdong.web.app/"
+          <a class="brand" href="https://kdong1224.github.io/dothome21/index.html"
             >밥값하는 개발자 : KDONG</a
           >
           <div class="nav-collapse collapse pull-right">
             <ul class="nav">
               <li>
-                <a href="http://kdong.dothome.co.kr/portfolio/index6.html"
-                  >Portfolio</a
+                <a href="https://rice-price-kdong.web.app/"
+                  >React - Port</a
                 >
               </li>
+              <li><a href="https://kdong1224.github.io/portfolio/portfolio.html">Portfolio</a></li>
               <li><a href="https://kdong1224.tistory.com/">Tistory</a></li>
               <li><a href="https://codepen.io/kdong1224">Codepen</a></li>
               <li><a href="https://kdongsreact.web.app/">React</a></li>
@@ -377,7 +378,7 @@
           <div id="container" class="clearfix">
             <!-- box -->
             <section class="color-shape class">
-              <a href="class/index.html" target="_blank">
+              <a href="https://rice-price-kdong.web.app/" target="_blank">
                 <div class="image-wrap">
                   <div class="hover-wrap">
                     <span class="overlay-img-donut">CLASS</span>
