혼자 작업중인거 추가

--- a/index.html
+++ b/index.html
@@ -156,16 +156,17 @@
           >
           <div class="nav-collapse collapse pull-right">
             <ul class="nav">
+              <li><a href="https://kdong-font-world.web.app/">TypeScript - Font</a></li>
               <li>
                 <a href="https://rice-price-kdong.web.app/"
                   >React - Port</a
                 >
               </li>
+              <li><a href="https://alcholcup-toy.web.app/">Alchol-Cup</a></li>
               <li><a href="https://kdong1224.github.io/portfolio/portfolio.html">Portfolio</a></li>
               <li><a href="https://kdong1224.tistory.com/">Tistory</a></li>
-              <li><a href="https://codepen.io/kdong1224">Codepen</a></li>
-              <li><a href="https://kdongsreact.web.app/">React</a></li>
-              <li><a href="https://kdongsvue.web.app/">Vue</a></li>
+              
+              
             </ul>
           </div>
         </div>
@@ -378,22 +379,70 @@
           <div id="container" class="clearfix">
             <!-- box -->
             <section class="color-shape class">
-              <a href="https://rice-price-kdong.web.app/" target="_blank">
+              <a href="https://kdong-font-world.web.app/" target="_blank">
                 <div class="image-wrap">
                   <div class="hover-wrap">
-                    <span class="overlay-img-donut">CLASS</span>
-                    <span class="overlay-text-thumb-donut">클래스</span>
-                    <span class="overlay-text-thumb1-donut">클래스</span>
-                    <span class="overlay-text-thumb2-donut">CLASS</span>
+                    <span class="overlay-img-donut">FONT-PROJECT</span>
+                    <span class="overlay-text-thumb-donut">폰트 프로젝트</span>
+                    <span class="overlay-text-thumb1-donut">폰트 프로젝트</span>
+                    <span class="overlay-text-thumb2-donut">FONT-PROJECT</span>
                   </div>
                   <img
                     src="assets/img/Landscape-circle/autumn.png"
                     alt="portfolio"
                   />
                   <div class="img-text donutImg">
-                    <h5>CLASS</h5>
-                    <p>클래스</p>
-                    <span>CLASS</span>
+                    <h5>FONT-PROJECT</h5>
+                    <p>폰트 프로젝트</p>
+                    <span>FONT-PROJECT</span>
+                  </div>
+                </div>
+              </a>
+            </section>
+            <!-- //box -->
+
+            <!-- box -->
+            <section class="color-shape class">
+              <a href="https://alcholcup-toy.web.app/" target="_blank">
+                <div class="image-wrap">
+                  <div class="hover-wrap">
+                    <span class="overlay-img-donut">ALCHOL-CUP</span>
+                    <span class="overlay-text-thumb-donut">술드컵</span>
+                    <span class="overlay-text-thumb1-donut">술드컵</span>
+                    <span class="overlay-text-thumb2-donut">ALCHOL-CUP</span>
+                  </div>
+                  <img
+                    src="assets/img/Landscape-circle/whale.png"
+                    alt="portfolio"
+                  />
+                  <div class="img-text donutImg">
+                    <h5>ALCHOL-CUP</h5>
+                    <p>술드컵</p>
+                    <span>ALCHOL-CUP</span>
+                  </div>
+                </div>
+              </a>
+            </section>
+            <!-- //box -->
+
+            <!-- box -->
+            <section class="color-shape class">
+              <a href="https://rice-price-kdong.web.app/" target="_blank">
+                <div class="image-wrap">
+                  <div class="hover-wrap">
+                    <span class="overlay-img-donut">TOY-PROJECT</span>
+                    <span class="overlay-text-thumb-donut">토이 프로젝트</span>
+                    <span class="overlay-text-thumb1-donut">토이 프로젝트</span>
+                    <span class="overlay-text-thumb2-donut">TOY-PROJECT</span>
+                  </div>
+                  <img
+                    src="assets/img/Landscape-circle/barbecue.png"
+                    alt="portfolio"
+                  />
+                  <div class="img-text donutImg">
+                    <h5>TOY-PROJECT</h5>
+                    <p>토이 프로젝트</p>
+                    <span>TOY-PROJECT</span>
                   </div>
                 </div>
               </a>
@@ -403,7 +452,7 @@
             <!-- box -->
             <section class="color-shape script">
               <a
-                href="http://kdong.dothome.co.kr/portfolio/index6.html"
+                href="https://kdong1224.github.io/portfolio/portfolio.html"
                 target="_blank"
               >
                 <div class="image-wrap">
