--- a/refer-mysql/index.html
+++ b/refer-mysql/index.html
@@ -639,6 +639,48 @@ mysql> SELECT * FROM myReview;
                 </div>
                 <!-- //Intro7 -->
 
+                <!-- //Intro8 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro8" class="page-header">집계 함수</h2>
+                    <div class="bs-callout bs-callout-info">
+                        SELECT 필드명 FROM 테이블명 앨리어스 JOIN 연결할 테이블명 엘리어스 ON(조건문);
+                    </div>
+<pre class="language-js"><code>CREATE TABLE myRecode (
+    recodeID int(10) unsigned auto_increment,
+    memberID int(10) unsigned,
+    javascript tinyint NOT NULL,
+    html tinyint NOT NULL,
+    css tinyint NOT NULL,
+    mysql tinyint NOT NULL,
+    react tinyint NOT NULL,
+    PRIMARY KEY (recodeID)
+) charset=utf8;
+
+INSERT INTO myRecode(memberID, javascript, html, css, mysql, react) VALUES(1, 50, 30, 10, 30, 10);
+INSERT INTO myRecode(memberID, javascript, html, css, mysql, react) VALUES(2, 60, 35, 20, 10, 20);
+INSERT INTO myRecode(memberID, javascript, html, css, mysql, react) VALUES(3, 55, 46, 50, 30, 31);
+INSERT INTO myRecode(memberID, javascript, html, css, mysql, react) VALUES(4, 84, 30, 70, 30, 50);
+INSERT INTO myRecode(memberID, javascript, html, css, mysql, react) VALUES(5, 56, 44, 90, 20, 40);
+INSERT INTO myRecode(memberID, javascript, html, css, mysql, react) VALUES(6, 80, 30, 50, 90, 50);
+INSERT INTO myRecode(memberID, javascript, html, css, mysql, react) VALUES(7, 40, 95, 50, 50, 60);
+INSERT INTO myRecode(memberID, javascript, html, css, mysql, react) VALUES(8, 49, 30, 20, 80, 100);
+INSERT INTO myRecode(memberID, javascript, html, css, mysql, react) VALUES(9, 55, 70, 40, 30, 85);
+INSERT INTO myRecode(memberID, javascript, html, css, mysql, react) VALUES(10, 55, 30, 40, 30, 20);
+</code></pre>
+                    <h3 id="intro8-1" class="pt20" class="page-header">집계함수의 종류</h3>
+<pre class="language-js">SELECT count(javascript) from myrecode;<code></code></pre>
+<pre class="language-js">SELECT sum(javascript) from myrecode;<code></code></pre>
+<pre class="language-js">SELECT avg(javascript) from myrecode;<code></code></pre>
+<pre class="language-js">SELECT max(javascript) from myrecode;<code></code></pre>
+<pre class="language-js">SELECT min(javascript) from myrecode;<code></code></pre>
+
+                    <h3 id="intro8-2" class="pt20" class="page-header">그룹별 집계</h3>
+                    <h4>GROUP BY</h4>
+                    <div> SELECT 필드명 FROM 테이블명 GROUP BY 필드명</div>
+<pre class="language-js"><code>SELECT memberID avg(javascript) from myrecode WHERE memberID IN(1,2,3,4) GROUP BY memberID;</code></pre>
+                </div>
+                <!-- //Intro8 -->
+
 
             </div>
             <!-- //col-md-9 -->
@@ -680,12 +722,18 @@ mysql> SELECT * FROM myReview;
                                 <li><a href="#intro6-4">데이터 삭제하기</a></li>
                             </ul>
                         </li>
-                        <li><a href="#intro7">테이블 Join</a>
+                        <li><a href="#intro7">테이블 합치기</a>
                             <ul class="nav bs-sidenav">
-                                <li><a href="#intro7-1">Join문 사용하기</a></li>
-                                <li><a href="#intro7-2">데이터 불러오기</a></li>
-                                <li><a href="#intro7-3">데이터 수정하기</a></li>
-                                <li><a href="#intro7-4">데이터 삭제하기</a></li>
+                                <li><a href="#intro7-1">데이터 JOIN</a></li>
+                                <!-- <li><a href="#intro7-2">데이터 불러오기</a></li> -->
+                                <!-- <li><a href="#intro7-3">데이터 수정하기</a></li> -->
+                                <!-- <li><a href="#intro7-4">데이터 삭제하기</a></li> -->
+                            </ul>
+                        </li>
+                        <li><a href="#intro8">집계함수</a>
+                            <ul class="nav bs-sidenav">
+                                <li><a href="#intro8-1">집계함수의 종류</a></li>
+                                <li><a href="#intro8-1">그룹별 집계</a></li>
                             </ul>
                         </li>
                     </ul>
